--- a/Contact.html
+++ b/Contact.html
@@ -6,13 +6,13 @@
     </head>
 
     <body>
-        <h2>Portfolio</h2>
+        <h1>Portfolio</h1>
         <!------------Nav Bar section------------------------------>
         <nav class="nav bar">
             <h3 id="item1">Career Goals</h3>
             <ol id="item2">
                 <span>
-                    <button style=""><a href="./PortfolioIndex.html">About Me</a></button>
+                    <button><a href="./PortfolioIndex.html">About Me</a></button>
                 </span>
                 <span>
                     <button><a href="./PortfolioIndex.html">Skills</a></button>
@@ -24,8 +24,14 @@
         </nav>
         <hr>
         <!--------------------------------------------------------->
-        <main>
-           
+        <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
+        <main class="contact">
+           <h3>Contact & resources:</h3>
+           <p>If you want to contact me here are some ways.</p>
+           <div class="contactInfo">
+                <p>Email: alexsoto313@gmail.com</p>
+                <p>Linkedin account: <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="dark" data-type="HORIZONTAL" data-vanity="alejandro-soto-683a85253" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://www.linkedin.com/in/alejandro-soto-683a85253?trk=profile-badge"></a></div></p>
+           </div>
         </main>
         <footer>
 
