--- a/PortfolioIndex.html
+++ b/PortfolioIndex.html
@@ -6,7 +6,7 @@
     </head>
 
     <body>
-        <h1>Portfolio</h1>
+        <h1>PortfolioUpdateArea</h1>
         <!------------Nav Bar section------------------------------>
         <nav class="nav bar">
             <h2 id="item1">Career Goals</h2>
