Update Main area

--- a/PortfolioIndex.html
+++ b/PortfolioIndex.html
@@ -6,9 +6,9 @@
     </head>
 
     <body>
-        <h1>PortfolioUpdateArea</h1>
+        <h1>Portfolio</h1>
         <!------------Nav Bar section------------------------------>
-        <nav class="nav bar">
+        <nav id="navBar">
             <h2 id="item1">Career Goals</h2>
             <ol id="item2">
                 <span>
@@ -26,17 +26,16 @@
         <!--------------------------------------------------------->
         <main>
             <div class="bodymain">
+                <aside>
+                    <h3><strong>Alejandro G Soto</strong><em> (Aspiring Software Engineer)</em></h3>
+                    <img src="./ACS.jpeg" alt="Alejandro engineer" width="300" height="400" style="border-radius: 25px;" class="myImg">
+                </aside>
                 <article>
                     <h3>Hard work and self disipline</h3>
                     <p>Coding career started at Eastern Michigan university during Covid. Origionally a Biology Major, but didnt see the long term career from that direction. That is when I took a class and was introduced to Java. That was initially my main language I was trying to perfect but never did. Becuase I was a self independent student I had to work full time and go to school part time. As my job Career became more intense and my living more expensive I had to leave school and focus primarily on my Career. I am now in a very important professional positiion and can afford more living. But the truth is I have not been passionate about my career like I was when learning programming. Instead of school I have been learning programming on Codecademy.com. There I have gained enough knowledge to create this very portfolio and many more projects. Hoping to make the Career jump from Warehouse Supply Chain Management to Software Engineering. A more fulfilling career for me.</p>
                     <h3>Proffessional Summary</h3>
                     <p>Detail-oriented professional with excellent communication, interpersonal and creative thinking skills. Aiming to leverage my abilities to successfully fill the vacancy at your company. Frequently praised as hardworking by my peers, I can be relied upon to help your company achieve its goals. With the ability to complete tasks on time in both individual and team settings. Dependable and reliable, ready to learn and grow with your company.</p>
                 </article>
-                <aside>
-                    <h3><strong>Alejandro G Soto</strong><em> (Aspiring Software Engineer)</em></h3>
-                    <img src="./ACS.jpeg" alt="Alejandro engineer" width="300" height="400" style="border-radius: 25px;" class="myImg">
-                    
-                </aside>
             </div>
             <hr>
             <div class="projects">
