--- a/PortfolioIndex.html
+++ b/PortfolioIndex.html
@@ -6,6 +6,11 @@
     </head>
 
     <body>
+        <!---- To Do List:
+        1)Finish Main page projects section
+        2) Make it responsive with @media quaries
+        3) Add some JavaScript interactive
+        -->
         <h1>Portfolio</h1>
         <!------------Nav Bar section------------------------------>
         <nav id="navBar">
