Contact Nav fix

--- a/Contact.html
+++ b/Contact.html
@@ -8,7 +8,7 @@
     <body>
         <h1>Portfolio</h1>
         <!------------Nav Bar section------------------------------>
-        <nav class="nav bar">
+        <nav id="navBar">
             <h3 id="item1">Career Goals</h3>
             <ol id="item2">
                 <span>
